// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates and runs the default filters 1`] = `
Changeset {
  "author": "John Doe <john@doe.com>",
  "coAuthorLines": [],
  "debugMessages": [
    "ADD TRACKING DATA: "adeira-source-id: 1234567890"",
  ],
  "description": "Test description

adeira-source-id: 1234567890",
  "diffs": Set {
    {
      "body": "new file mode 100644
index 0000000000000000000000000000000000000000..1111111111111111111111111111111111111111
--- /dev/null
+++ b//destination_path/fakeFile_1.txt
@@ -0,0 +1 @@
+fake content",
      "path": "/destination_path/fakeFile_1.txt",
    },
    {
      "body": "new file mode 100644
index 0000000000000000000000000000000000000000..1111111111111111111111111111111111111111
--- /dev/null
+++ b//destination_path/fakeFile_2.txt
@@ -0,0 +1 @@
+fake content",
      "path": "/destination_path/fakeFile_2.txt",
    },
  },
  "id": "1234567890",
  "subject": "Test subject",
  "timestamp": "Mon, 16 July 2019 10:55:04 -0100",
}
`;

exports[`creates and runs the default filters with Co-authored-by 1`] = `
Changeset {
  "author": "John Doe <john@doe.com>",
  "coAuthorLines": [
    "Co-authored-by: Trond Bergquist <trond_bergquist@hotmail.com>",
    "Co-authored-by: Patricia Bergquist <patricia_bergquist@hotmail.com>",
  ],
  "debugMessages": [
    "ADD TRACKING DATA: "adeira-source-id: 1234567890"",
  ],
  "description": "Test description

adeira-source-id: 1234567890

Co-authored-by: Trond Bergquist <trond_bergquist@hotmail.com>
Co-authored-by: Patricia Bergquist <patricia_bergquist@hotmail.com>",
  "diffs": Set {
    {
      "body": "new file mode 100644
index 0000000000000000000000000000000000000000..1111111111111111111111111111111111111111
--- /dev/null
+++ b//destination_path/fakeFile_1.txt
@@ -0,0 +1 @@
+fake content",
      "path": "/destination_path/fakeFile_1.txt",
    },
    {
      "body": "new file mode 100644
index 0000000000000000000000000000000000000000..1111111111111111111111111111111111111111
--- /dev/null
+++ b//destination_path/fakeFile_2.txt
@@ -0,0 +1 @@
+fake content",
      "path": "/destination_path/fakeFile_2.txt",
    },
  },
  "id": "1234567890",
  "subject": "Test subject",
  "timestamp": "Mon, 16 July 2019 10:55:04 -0100",
}
`;
